[editor/canvas] Fix horizontal scrollbar appearing for sidebar. Add padding.

--- a/app/src/editor/canvas/components/Canvas.pcss
+++ b/app/src/editor/canvas/components/Canvas.pcss
@@ -19,6 +19,8 @@
   left: 0;
   bottom: 0;
   right: 0;
+  margin-bottom: 20px;
+  margin-right: 20px;
 }
 
 .Modules:focus {
