--- a/app/src/editor/canvas/components/Module.pcss
+++ b/app/src/editor/canvas/components/Module.pcss
@@ -17,6 +17,7 @@
 }
 
 .Module {
+  margin: 20px;
   composes: ModuleBase;
   position: absolute;
   min-width: 100px;
