--- a/app/src/editor/canvas/components/Status.pcss
+++ b/app/src/editor/canvas/components/Status.pcss
@@ -6,7 +6,7 @@
   font-size: 12px;
   text-align: right;
   letter-spacing: 0;
-  z-index: 12;
+  z-index: 1;
   margin: 13px 40px;
   user-select: none;
 }
