--- a/app/src/editor/canvas/index.pcss
+++ b/app/src/editor/canvas/index.pcss
@@ -13,6 +13,7 @@
     'footer footer';
   grid-template-rows: 1fr auto;
   grid-template-columns: 1fr auto;
+  overflow: hidden;
 }
 
 .Canvas {
